--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --release --verbose --target x86_64-unknown-linux-gnu
+      run: cargo build --release --target x86_64-unknown-linux-gnu
     - name: Strip Binary
       run: strip "target/x86_64-unknown-linux-gnu/release/ruast_qqbot"
     - name: Upload Artifact
