--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde_json = "^1.0.138"
 tokio = { version = "^1", features = ["full"] }
 tokio-tungstenite = "^0.26.1"
 tungstenite = "^0.26.1"
-redis = "*"
+redis = { version = "^0.28.2", features = ["tokio-comp"] }
 uuid = { version = "^1.12.1", features = ["v4"] }
 reqwest = { version = "^0.12", features = ["cookies", "json"] }
 reqwest-eventsource = "^0.6"
