--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ruast_qqbot"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 
 [dependencies]
@@ -19,3 +19,5 @@ reqwest-eventsource = "^0.6"
 regex = "^1.11.1"
 once_cell = "^1.20.2"
 rand = "^0.9.0"
+env_logger = { version = "^0.11.6", features = ["humantime"] }
+log = "^0.4.25"
